# intelligence-per-watt

./: .gitignore  README.md  profile_architecture.md
energy-monitor/: Cargo.toml  README.md
intelligence-per-watt/: README.md  pyproject.toml
intelligence_per_watt/: README.md  pyproject.toml
mindi/: pyproject.toml
mindi-energy-monitor/: Cargo.toml  README.md  mindi-energy-monitor.example.toml
mindi-energy-monitor/proto/: energy.proto
mindi-energy-monitor/src/: config.rs  lib.rs  main.rs  server.rs
mindi-energy-monitor/src/collectors/: amd.rs  macos.rs  mod.rs  nvidia.rs
mindi/src/mindi/: __init__.py
mindi/src/mindi/analysis/: __init__.py  loader.py  regression.py  report.py
mindi/src/mindi/cli/: __init__.py  _binaries.py  _group.py  analyze.py  energy.py  list.py  plot.py  profile.py
mindi/src/mindi/cli/datasets/: __init__.py
mindi/src/mindi/clients/: __init__.py  ollama.py  vllm.py
mindi/src/mindi/core/: __init__.py  collector.py  dataset.py  registry.py  types.py
mindi/src/mindi/datasets/: __init__.py  trafficbench.py
mindi/src/mindi/datasets/data/mixed_1k_seed1_base/: dataset_info.json
mindi/src/mindi/datasets/trafficbench/: __init__.py  trafficbench.py
mindi/src/mindi/execution/: __init__.py  hardware.py  resolution.py  runner.py  sink.py  telemetry.py  types.py
mindi/src/mindi/telemetry/: __init__.py  _binaries.py  collector.py  proto.py
mindi/src/mindi/telemetry_collectors/: __init__.py
mindi/src/mindi/telemetry_collectors/mindi/: __init__.py  collector.py  launcher.py
mindi/src/mindi/visualization/: __init__.py  base.py  regression.py
mindi/src/mindi_profiler/: __init__.py
mindi/src/mindi_profiler/cli/: __init__.py  profile.py
mindi/src/mindi_profiler/clients/: __init__.py  ollama.py
mindi/src/mindi_profiler/core/: client.py  collector.py  types.py
mindi/src/mindi_profiler/datasets/: trafficbench.py
mindi/src/mindi_profiler/telemetry_collectors/: __init__.py  collector.py
mindi/src/mindi_profiler/telemetry_collectors/mindi/: collector.py  launcher.py
mindi/src/tests/: __init__.py
mindi/src/tests/core/: test_dataset_provider.py  test_registry.py
mindi/src/tests/datasets/: test_trafficbench.py
mindi/src/tests/telemetry/: __init__.py  test_energy_monitor.py  test_mindi_energy_monitor.py
mindi/src/tests/telemetry_collectors/: __init__.py  test_mindi_energy_monitor.py
mindi/src/tests/visualization/: __init__.py
scripts/: build_cli_binaries.py  (+4 more)
(+117 files in other folders)
