[package]
name = "mindi-energy-monitor"
version = "0.1.0"
edition = "2024"

[lib]
name = "mindi_energy_monitor"
path = "src/lib.rs"

[features]
default = []
# Enable AMD energy collector via ROCm SMI when explicitly requested
amd = ["dep:rocm_smi_lib"]

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
once_cell = "1.20"
parking_lot = "0.12"
sysinfo = "0.37.2"
num_cpus = "1.16"

# gRPC dependencies
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio-stream = "0.1"

# Configuration
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }

# Platform-specific dependencies
[target.'cfg(all(not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
rocm_smi_lib = { version = "0.3", optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
nvml-wrapper = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
async-process = "2.3"
futures = "0.3"
plist = "1.7"

[build-dependencies]
tonic-prost-build = "0.14.2"

[[bin]]
name = "mindi-energy-monitor"
path = "src/main.rs"
