[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mindi"
version = "0.1.0"
description = "mindi profiling system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "aiohttp>=3.12.15",
    "rich>=13",
    "click>=8",
    "matplotlib>=3.9",
    "grpcio>=1.62",
    "protobuf>=5",
    "pytest>=8",
    "requests>=2",
    "datasets>=2.20",
    "numpy>=1.26",
    "pyarrow>=15",
    "tqdm>=4.66",
    "ollama"
]

[project.scripts]
mindi = "mindi.cli:main"